--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,6 +19,7 @@ $huge-font-size: 24px;
 
 // Layout
 $content-width: 1200px;
+$prose-width: 720px;
 $spacing-unit: 30px;
 $border-radius: 4px;
 
